<resources>
    <string name="app_name">FirebaseAuthorisation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sender">Sender</string>
    <string name="reciever">Reciever</string>
    <string name="receiver">receiver</string>
    <string name="todo">TODO</string>
    <string name="type_here">Type here</string>
    <string name="send">Send</string>
    <string name="Sender">Sender</string>
    <string name="Receiver">Receiver</string>
    <string name="time">Time</string>
    <string name="phone_no">Phone no.</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="share_happiness">Share Happiness</string>
    <string name="express_yourself">Express Yourself</string>
    <string name="logout">Logout</string>
    <string name="email">email</string>
</resources>