<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/receiverLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/receiver_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/image1"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="244dp"
                android:layout_height="38dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/receiver"
                    android:layout_width="244dp"
                    android:layout_height="38dp"
                    android:background="@drawable/card14"
                    android:paddingStart="10dp"
                    android:paddingTop="6dp"
                    android:text="@string/Receiver"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/ReceiverTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:text="@string/time"
                android:layout_marginStart="4dp"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/senderLayout"
            android:layout_width="280dp"
            android:layout_height="38dp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SenderTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:text="@string/time"
                android:layout_marginEnd="4dp"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sender"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/card15"
                android:gravity="end"
                android:paddingTop="6dp"
                android:paddingEnd="6dp"
                android:text="@string/Sender"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>